# droidcam-obs-revert

./: CMakeLists.txt  CMakePresets.json  buildspec.json  vcpkg.json
.github/scripts/: .Aptfile  .Brewfile  Build-Windows.ps1  build-macos  build-ubuntu
.github/scripts/utils.pwsh/: Invoke-External-Continue.ps1
.github/workflows/: build-project.yaml
cmake/windows/: compilerconfig.cmake
src/: command.h  device_discovery.cc  net.h
